# run

./: Calculations.cpp  Calculations.hpp  GBox.cpp  GBox.hpp  Game.cpp  Game.hpp  GameAction.cpp  GameAction.hpp  Landscape.cpp  Landscape.hpp  Line.cpp  Line.hpp  Movement.cpp  Movement.hpp  Player.cpp  Player.hpp  TextureLoader.cpp  TextureLoader.hpp  Track.cpp  Track.hpp  VecFunctions.hpp  check.csv  meson.build
assets/levels/: level.csv
assets/shaders/: parallax.glsl
